[gd_scene load_steps=4 format=3 uid="uid://bdjtqribdal8v"]

[ext_resource type="Script" path="res://scripts/camera.gd" id="1_kjsyy"]
[ext_resource type="Script" path="res://scripts/telekinetic_selector.gd" id="2_eteo0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvprn"]
size = Vector2(1352, 758)

[node name="Camera2D" type="Camera2D"]
zoom = Vector2(0.85, 0.85)
script = ExtResource("1_kjsyy")

[node name="TelekineticArea" type="Area2D" parent="."]
script = ExtResource("2_eteo0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TelekineticArea"]
shape = SubResource("RectangleShape2D_bvprn")
debug_color = Color(0.235336, 0.617495, 0.453487, 0.42)

[node name="TelekineticControlLabel" type="Label" parent="."]
offset_left = 465.0
offset_top = -375.0
offset_right = 664.0
offset_bottom = -352.0
horizontal_alignment = 2
autowrap_mode = 3

[connection signal="body_entered" from="TelekineticArea" to="TelekineticArea" method="_on_telekinetic_area_body_entered"]
[connection signal="body_exited" from="TelekineticArea" to="TelekineticArea" method="_on_telekinetic_area_body_exited"]
